tests/dataset/tpc-ds/compiler/rust/q53.error
rustc: exit status 1
warning: type `Store_sale` should have an upper camel case name
 --> /tmp/q53.rs:9:8
  |
9 | struct Store_sale {
  |        ^^^^^^^^^^ help: convert the identifier to upper camel case: `StoreSale`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

warning: type `Date_dim` should have an upper camel case name
  --> /tmp/q53.rs:16:8
   |
16 | struct Date_dim {
   |        ^^^^^^^^ help: convert the identifier to upper camel case: `DateDim`

error[E0609]: no field `price` on type `&Item1`
  --> /tmp/q53.rs:70:667
   |
70 | ...mp3 = Vec::new();for x in &g.clone().items { tmp3.push(x.price); } tmp3 }), avg_sales: avg(&{ let mut tmp4 = Vec::new();for x in &g.cl...
   |                                                             ^^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
70 |     let grouped = { let mut tmp1 = std::collections::HashMap::new();for ss in &store_sales { for i in &item { if !(ss.item == i.i_item_sk) { continue; } for d in &date_dim { if !(ss.date == d.d_date_sk) { continue; } let key = i.i_manufact_id; tmp1.entry(key).or_insert_with(Vec::new).push(Item1 {ss: ss.clone(), i: i.clone(), d: d.clone() }); } } } let mut tmp2 = Vec::<Group>::new(); for (k,v) in tmp1 { tmp2.push(Group { key: k, items: v }); } tmp2.sort_by(|a,b| a.key.partial_cmp(&b.key).unwrap()); let mut result = Vec::new(); for g in tmp2 { result.push(Result { manu: g.key, sum_sales: sum(&{ let mut tmp3 = Vec::new();for x in &g.clone().items { tmp3.push(x.ss.price); } tmp3 }), avg_sales: avg(&{ let mut tmp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.price); } tmp4 }) }); } result };
   |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           +++

error[E0609]: no field `price` on type `&Item1`
  --> /tmp/q53.rs:70:770
   |
70 | ...mp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.price); } tmp4 }) }); } result };
   |                                                             ^^^^^ unknown field
   |
help: one of the expressions' fields has a field of the same name
   |
70 |     let grouped = { let mut tmp1 = std::collections::HashMap::new();for ss in &store_sales { for i in &item { if !(ss.item == i.i_item_sk) { continue; } for d in &date_dim { if !(ss.date == d.d_date_sk) { continue; } let key = i.i_manufact_id; tmp1.entry(key).or_insert_with(Vec::new).push(Item1 {ss: ss.clone(), i: i.clone(), d: d.clone() }); } } } let mut tmp2 = Vec::<Group>::new(); for (k,v) in tmp1 { tmp2.push(Group { key: k, items: v }); } tmp2.sort_by(|a,b| a.key.partial_cmp(&b.key).unwrap()); let mut result = Vec::new(); for g in tmp2 { result.push(Result { manu: g.key, sum_sales: sum(&{ let mut tmp3 = Vec::new();for x in &g.clone().items { tmp3.push(x.price); } tmp3 }), avg_sales: avg(&{ let mut tmp4 = Vec::new();for x in &g.clone().items { tmp4.push(x.ss.price); } tmp4 }) }); } result };
   |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  +++

error[E0308]: mismatched types
  --> /tmp/q53.rs:73:67
   |
73 |     assert!(result == vec![Result2 { i_manufact_id: 1, sum_sales: 20.0 }, Result2 { i_manufact_id: 2, sum_sales: 53.0 }]);
   |                                                                   ^^^^ expected `i32`, found floating-point number

error[E0308]: mismatched types
  --> /tmp/q53.rs:73:114
   |
73 |     assert!(result == vec![Result2 { i_manufact_id: 1, sum_sales: 20.0 }, Result2 { i_manufact_id: 2, sum_sales: 53.0 }]);
   |                                                                                                                  ^^^^ expected `i32`, found floating-point number

error: aborting due to 4 previous errors; 2 warnings emitted

Some errors have detailed explanations: E0308, E0609.
For more information about an error, try `rustc --explain E0308`.
